--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -42,7 +42,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTxtPhoneNumberProfile"
+        android:id="@+id/editTxtPhoneEdit"
         android:layout_width="214dp"
         android:layout_height="48dp"
         android:layout_marginEnd="16dp"
@@ -136,7 +136,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTxtUserNameProfile"
+        android:id="@+id/editTxtUserNameEdit"
         android:layout_width="214dp"
         android:layout_height="48dp"
         android:layout_marginEnd="16dp"
