--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -51,12 +51,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTxtDobAdd"
+        android:id="@+id/editTxtCodeAddStudent"
         android:layout_width="214dp"
         android:layout_height="48dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="448dp"
-        android:editable="false"
         android:ems="10"
         android:hint="Code"
         app:layout_constraintBottom_toBottomOf="parent"
