--- a/app/src/main/res/layout/activity_certificate_list.xml
+++ b/app/src/main/res/layout/activity_certificate_list.xml
@@ -7,6 +7,16 @@
     tools:context=".CertificateListActivity">
 
     <ImageView
+        android:id="@+id/imageExportCertificate"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="128dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_import_export_24" />
+
+    <ImageView
         android:id="@+id/imgAddCertificate"
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -34,7 +44,7 @@
         android:text="Certificates"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,22 +52,33 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginBottom="668dp"
+        android:layout_marginBottom="628dp"
         android:background="#DAD8D8"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewListCertificate"
-        android:layout_width="395dp"
-        android:layout_height="634dp"
+        android:layout_width="392dp"
+        android:layout_height="580dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Export Certificate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.966"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
